# internalNetworkLan

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
src/: config.rs  control_message.rs  frame.rs  lib.rs  main.rs  tcp.rs  udp.rs
src/conf/: rtunClient.conf  rtunServer.conf
tests/: MyTest.rs
