[package]
name = "internalNetworkLan"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1",features = ["full"] }
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"

[dev-dependencies]
pretty_assertions = { version = "1" ,features = ["default"]}